rust/lakesoul-flight/k8s/flight_server.yaml
# Experimental component; not part of LakeSoul Core GA.
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lakesoul-flight-server
  name: lakesoul-flight-server
  namespace: lake-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lakesoul-flight-server
  template:
    metadata:
      labels:
        app: lakesoul-flight-server
    spec:
      containers:
        - image: swr.cn-southwest-2.myhuaweicloud.com/dmetasoul-repo/lakesoul-flight-server:v1.0.0
          command:
            [
              "/app/flight_sql_server",
              "--warehouse-prefix",
              "hdfs://simple-hdfs/lakesoul-bucket/flight_test",
            ]
          resources:
            limits:
              cpu: 200m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
          imagePullPolicy: Always
          name: lakesoul-flight-server
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: /etc/hadoop/conf
              name: hadoop-config-volume
            - mountPath: /opt/hadoop/etc/hadoop
              name: hadoop-config-volume
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: hdfs-site.xml
                path: hdfs-site.xml
              - key: core-site.xml
                path: core-site.xml
            name: test-dashboard-config
          name: hadoop-config-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lakesoul-flight-server
  name: lakesoul-flight-server-service
  namespace: lake-test
spec:
  clusterIP: None
  ports:
    - port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: lakesoul-flight-server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: "${remote_addr}-${remote_port}"
  name: lakesoul-flight-server-ingress
  namespace: lake-test
spec:
  ingressClassName: nginx-1
  rules:
    - host: dapm-api.dmetasoul.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lakesoul-flight-server-service
                port:
                  number: 50051
  tls:
    - hosts:
        - "*.dmetasoul.com"
      secretName: csair-secret
